[package]
name = "prime-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
num-prime = "0.4.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["arbitrary_precision"] }
